dependent spinner and officer page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".officer"
+            android:exported="true" />
+        <activity
             android:name=".Register"
             android:exported="true" />
         <activity
